--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -48,7 +48,7 @@
       <li>
         <a href="https://developer.apple.com/design/human-interface-guidelines/ " target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_ohc=VkESJC9WfnsAQkJnUF_iWXl7gXvkNEmw0kmPhvO_79ppH9ey8f5566YXQ&_nc_ht=scontent.fbfh14-2.fna&oh=48cfbe75948d71141401390899a7d99d&oe=5DFD2685" alt="#" />          
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=1j7xTrJ9bLoAX-nWmi3&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=086da21f7134d09342caac12a5cfdcd2&oe=5E7F763B" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -143,7 +143,7 @@
       <li>
         <a href="https://www.strawpoll.me/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=104&_nc_ohc=_hn2tUguDUkAQmv10jTjxfqu5JWIODixwC2eAa0ahslO2qINKowvtQINw&_nc_ht=scontent.fbfh14-2.fna&oh=cb843a32e6654e8d375973d4213991e4&oe=5E6AA916" alt="#" />          
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/13307433_1115499378510722_2943287756945467912_n.png?_nc_cat=104&_nc_sid=dbb9e7&_nc_ohc=QTUj6RmjSiEAX-uGynS&_nc_ht=scontent.fcwb2-1.fna&oh=faced5564357ad9db1a7f074294d80fb&oe=5EA3A16A" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -203,7 +203,7 @@
       <li>
         <a href="https://zeplin.io/" target="_blank">
           <div class="resource-icon">          
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t31.0-1/p148x148/1911142_417326238477451_4522575293430406773_o.png?_nc_cat=104&_nc_ohc=2bdcm5i-dWgAQkkizHpDMHaicNR9prPZNTH7nmWQW1UweZUwvkYUoEUNw&_nc_ht=scontent.fcwb2-1.fna&oh=d65f1022fb60cd754e358a2f00006c13&oe=5E6C5686" alt="#" />          
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t31.0-1/p320x320/1911142_417326238477451_4522575293430406773_o.png?_nc_cat=104&_nc_sid=dbb9e7&_nc_ohc=Go4plt3AkJEAX_MvHyS&_nc_ht=scontent.fcwb2-1.fna&oh=432169e77a5769ab66e1c971b05b3f4d&oe=5EA22333" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -263,7 +263,7 @@
       <li>
         <a href="https://framer.com/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/35282540_985848591571651_1114989551744450560_n.jpg?_nc_cat=110&_nc_ohc=F0-Tl8II9v8AQnrhu330HBYmgUU7_TwlH-pSD6N7Rge4D1H8_Fz63n5Uw&_nc_ht=scontent.fcwb2-2.fna&oh=e6ef5c8d0857fc954b315d92d33b5755&oe=5E68B5F3" alt="#" />          
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p160x160/35282540_985848591571651_1114989551744450560_n.jpg?_nc_cat=110&_nc_sid=dbb9e7&_nc_ohc=_GyKvZouOA0AX8kw0iZ&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=a7795d94c8f2642eb731a44b374864fd&oe=5EA50694" alt="#" />          
           </div>
         </a>        
         <div class="resource-details">
@@ -278,7 +278,7 @@
       <li>
         <a href="https://maze.design/" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/31165840_355665734925368_3369729425162633216_n.png?_nc_cat=105&_nc_ohc=tzp4uvImvDoAQl6QxV8z3Acdz6JwdcIV3Prvit-mY-fHTRR600Gi7v4Ug&_nc_ht=scontent.fcwb2-1.fna&oh=7c5f62c9db7f09569b4e863d002b6110&oe=5E6F3E9E" alt="#" />          
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/31165840_355665734925368_3369729425162633216_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=CtVGXiURmVQAX_B5zML&_nc_ht=scontent.fcwb2-1.fna&oh=26df758b2d5f9844ed322aa43a5daa48&oe=5EA30062" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -358,7 +358,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.protopie.io/" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/68260330_2455279271184629_8583132763962474496_n.jpg?_nc_cat=105&_nc_ohc=X4O2Zmzbc6kAQk5ANEnMMgse1HF9oKxmGBJslX4PLc3Kwu4ytoNj5P5eg&_nc_ht=scontent.fcwb2-1.fna&oh=c073e629eaf4e5885421435927262441&oe=5E7107DB" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/68260330_2455279271184629_8583132763962474496_n.jpg?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=8YxOeQMwwJkAX_4wOF5&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=c51db8e4dbec4d4a7bae2b1a2e918d71&oe=5EA52BA5" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -487,7 +487,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="http://mwpt.com.br/novidades/" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t31.0-1/p320x320/21741098_1587811881286037_3244959824989961902_o.png?_nc_cat=106&_nc_ohc=_4bNIiH5Ov0AQkEvSxzgzZEdr8XSpHtBj2kuQ6wwEhvjMTtrKTvF0wSaA&_nc_ht=scontent.fcwb1-1.fna&oh=2207ebacc4a3c3a286351512fb9e0aea&oe=5E78B6D9" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t31.0-1/p320x320/21741098_1587811881286037_3244959824989961902_o.png?_nc_cat=106&_nc_sid=dbb9e7&_nc_ohc=5cc6hgcdM9EAX-GhMUE&_nc_ht=scontent.fcwb2-1.fna&oh=5d7721bdd95b90c03834e4b8c73981fe&oe=5EA565A7" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -641,7 +641,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://uxmastery.com/" target="_blank">
-            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/c7.0.320.320a/p320x320/10445968_940408919350826_6743417754018838516_n.png?_nc_cat=101&_nc_ohc=otJaCQQ_T5QAQmS-git_m564pqMKox7IRnAkrHATfOINjdVkB_seToyew&_nc_ht=scontent.fbfh14-1.fna&oh=cea26d6c69a681c76a3613066e2f8bc8&oe=5E731D79" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/c7.0.320.320a/p320x320/10445968_940408919350826_6743417754018838516_n.png?_nc_cat=101&_nc_sid=dbb9e7&_nc_ohc=b6g6AWChkYwAX-92GL_&_nc_ht=scontent.fcwb2-1.fna&oh=fcf38986270c77b67db0e37341c66725&oe=5EA31607" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -782,7 +782,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://brasil.uxdesign.cc/meu-checklist-de-tarefas-para-um-teste-de-usabilidade-2c5e552ce259" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/p200x200/30443040_10156205485194471_8154900686011494256_n.png?_nc_cat=0&oh=8409e0956e5c7aeb80da029fa45ec89c&oe=5C320310" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/30443040_10156205485194471_8154900686011494256_n.png?_nc_cat=110&_nc_sid=dbb9e7&_nc_ohc=T_3iBWT3Ir0AX-jE_9w&_nc_ht=scontent.fcwb2-2.fna&oh=5b122d60487b51ec8881d1f282e84469&oe=5EA56EF6" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -797,7 +797,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://designmodo.com/repeat-grid-adobe-xd/" target="_blank">
-            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/ead8a8c8d47b09c187812f43d48dbf23/5C1B9767/t51.2885-19/s150x150/30077987_166101170684271_2785374630343344128_n.jpg" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/30726983_1611603245555672_2263510284037630351_n.png?_nc_cat=103&_nc_sid=dbb9e7&_nc_ohc=pmRg-plmyb8AX9MF6B1&_nc_ht=scontent.fcwb2-1.fna&oh=5d3c1cf2b20f370095c000df9b93327f&oe=5EA3D0BB" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -876,7 +876,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="http://www.uipatternhub.com/" target="_blank">
-            <img src="https://instagram.fcwb1-1.fna.fbcdn.net/vp/e710896e3f397b677f2a76aada76d892/5C0120B0/t51.2885-19/s150x150/38066231_515977582191254_7295962719260246016_n.jpg" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/46646591_2321442431218855_6172213083499397120_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=8yYaHnoP7f4AX-vNEFY&_nc_ht=scontent.fcwb2-1.fna&oh=bfa583e38ad3056fded2e54c3d3ef600&oe=5EA2E520" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -891,7 +891,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://www.interaction-design.org/literature/article/10-great-sites-for-ui-design-patterns" target="_blank">
-            <img src="https://scontent.fcwb1-1.fna.fbcdn.net/v/t1.0-1/603766_10154064704532228_356610347946095927_n.png?_nc_cat=1&oh=48674731647fc441e5d8cc2a25378d9a&oe=5C3A72CC" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/603766_10154064704532228_356610347946095927_n.png?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=f_ychBi_mHUAX8_SZNF&_nc_ht=scontent.fcwb2-1.fna&oh=9bf9416dcc2bf0db88112ce699fc49b0&oe=5EA238B4" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -1025,7 +1025,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://designculture.com.br/o-que-e-ui-design-e-ux-design" target="_blank">
-            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/45981494_2399728840042658_5115077020404940800_n.png?_nc_cat=108&_nc_ht=scontent.fcwb2-2.fna&oh=24de1836e11aa4d6302e67aa35aeedd3&oe=5C6C674D" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p200x200/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&_nc_sid=dbb9e7&_nc_ohc=UXM8SNS84iQAX9OcixA&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=1d5f1b0e3a14b49191bf2677fdfd27ec&oe=5EA33D72" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -1052,22 +1052,6 @@ and share your amazing creations in a matter of minutes.</p>
           <p>Raffcom</p>
         </div>
         <a class="resource-button" href="https://www.raffcom.com.br/blog/qual-a-diferenca-entre-ux-e-ui/" target="_blank">Veja</a>
-      </li>
-
-      <li>
-        <div class="resource-icon">
-          <a href="https://br.udacity.com/blog/post/ux-ui-diferencas" target="_blank">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/c1.0.199.199/13233111_254889381532001_6934889014737161810_n.png?_nc_cat=1&_nc_ht=scontent.fcwb2-1.fna&oh=fe6cbc055c3c0cb2ce9844ddd697b07c&oe=5C6F3728" alt="#" />
-          </a>
-        </div>
-        <div class="resource-details">
-          <h2>
-            <a href="https://br.udacity.com/blog/post/ux-ui-diferencas" target="_blank">UX e UI: quais são as maiores diferenças entre esses campos?
-            </a>
-          </h2>
-          <p>Udacity</p>
-        </div>
-        <a class="resource-button" href="https://br.udacity.com/blog/post/ux-ui-diferencas" target="_blank">Veja</a>
       </li>
 
       <li>
