Updated Design Page

--- a/my/paginas/design/index.html
+++ b/my/paginas/design/index.html
@@ -214,7 +214,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://designermaodevaca.com/categoria/post" target="_blank">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/34532208_2177931398889843_1389285009583505408_o.png?_nc_cat=109&_nc_ohc=2GOkQoLsT6wAQl8It__GsdTMkRPzOUNfI18gcb0cXte0pfRRAOoXh0p4w&_nc_ht=scontent.fbfh14-2.fna&oh=eb664cfebd985278f58a35a7810b6003&oe=5E740A67" alt="#" />
+            <img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/34532208_2177931398889843_1389285009583505408_o.png?_nc_cat=109&_nc_sid=dbb9e7&_nc_ohc=jkAXtVaFCIMAX-huP5v&_nc_ht=scontent.fcwb2-2.fna&oh=4465fbd661e8a624284b7a93d99abf3d&oe=5EA22919" alt="#" />
           </a>
         </div>
         <div class="resource-details">
@@ -248,7 +248,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://theblog.adobe.com/" target="_blank">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t31.0-1/p320x320/26756286_1588906554497375_5273049988508376744_o.png?_nc_cat=105&_nc_ohc=HBg7efIcEUgAQngh6AqXn1Jj2ULcPUQzX4LWpmlvbnTjmXczrVLsLtf4A&_nc_ht=scontent.fbfh14-2.fna&oh=4326869bf87b61d8c50d1d80639595d3&oe=5E71E0B7" alt="#" />
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/87502430_2790475761007109_724369019271905280_o.png?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=pXx3WJcL280AX_pdgzE&_nc_ht=scontent.fcwb2-1.fna&oh=50b2c3f7606e15b37ef18efd3b0bfe1a&oe=5EA21623" alt="#" />
           </a>
         </div>
         <div class="resource-details">
