--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2013,6 +2013,19 @@
 				</div>
 				<a class="resource-button" href="https://www.sebrae.com.br/sites/PortalSebrae/cursosonline" target="_blank">Veja</a>
 			</li>
+			
+			<li>
+				<a href="https://sitecampus.com.br/cursos-online-site-campus/" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t31.0-1/p320x320/14556798_1675538382763895_2907870184274959618_o.jpg?_nc_cat=102&_nc_sid=dbb9e7&_nc_ohc=l2_QE1UTuIcAX9KbMXW&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=6b06b7da853fa471ad0c9470c55909f6&oe=5EA6DA09" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://sitecampus.com.br/cursos-online-site-campus/" target="_blank">Site Campus</a> </h2>
+					<p>Cursos Online focados em gestão</p>
+				</div>
+				<a class="resource-button" href="https://sitecampus.com.br/cursos-online-site-campus/" target="_blank">Veja</a>
+			</li>
 		
 
 			<div id="atalhos"></div>
