--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2026,6 +2026,19 @@
 				</div>
 				<a class="resource-button" href="https://sitecampus.com.br/cursos-online-site-campus/" target="_blank">Veja</a>
 			</li>
+			
+			<li>
+				<a href="https://academy.moz.com/" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/50913140_10155830431806246_8108896970652778496_n.jpg?_nc_cat=108&_nc_sid=dbb9e7&_nc_ohc=DQAEKvyNLJcAX-JLJW7&_nc_ht=scontent.fcwb2-2.fna&oh=d376197400bb778da0f490ca69e63948&oe=5EA535A7" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://academy.moz.com/" target="_blank">Moz Academy</a> </h2>
+					<p>Cursos Online focados em SEO</p>
+				</div>
+				<a class="resource-button" href="https://academy.moz.com/" target="_blank">Veja</a>
+			</li>
 		
 
 			<div id="atalhos"></div>
