--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1989,6 +1989,32 @@
 			</li>
 			
 			<li>
+				<a href="https://www.treinaweb.com.br/" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/26047497_10155203472287405_6195080552181580604_n.png?_nc_cat=104&_nc_sid=dbb9e7&_nc_ohc=3k-ppU7H1U8AX_sr38-&_nc_ht=scontent.fcwb2-1.fna&oh=654d81fc4078e52909c2044be92ac49b&oe=5EA8E6AA" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://www.treinaweb.com.br/" target="_blank">TreinaWeb</a> </h2>
+					<p>Cursos da área de programação</p>
+				</div>
+				<a class="resource-button" href="https://www.treinaweb.com.br/" target="_blank">Veja</a>
+			</li>
+			
+			<li>
+				<a href="https://www.softblue.com.br/" target="_blank">
+					<div class="resource-icon">
+						<img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p320x320/15826611_1291213974287324_710776575585013482_n.png?_nc_cat=101&_nc_sid=dbb9e7&_nc_ohc=IsJ2XuDNAiwAX9PzcIs&_nc_ht=scontent.fcwb2-1.fna&oh=3ce52e2bb70687f0926c49c13ce67746&oe=5EA7C890" alt="Cursos" />					
+					</div>
+				</a>
+				<div class="resource-details">
+					<h2> <a href="https://www.softblue.com.br/" target="_blank">Softblue</a> </h2>
+					<p>Cursos da área de programação</p>
+				</div>
+				<a class="resource-button" href="https://www.softblue.com.br/" target="_blank">Veja</a>
+			</li>
+			
+			<li>
 				<a href="https://www.ev.org.br/" target="_blank">
 					<div class="resource-icon">
 						<img src="https://scontent.fcwb2-2.fna.fbcdn.net/v/t1.0-1/p320x320/59713581_309923663241308_8110430501610717184_o.jpg?_nc_cat=108&_nc_sid=dbb9e7&_nc_ohc=YXzb-1yj3OAAX822Nvx&_nc_ht=scontent.fcwb2-2.fna&_nc_tp=6&oh=bc2c39800cde1a309cba2db637488f35&oe=5EA1037D" alt="Cursos" />					
