JavaScript - MDN Web Docs

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1387,7 +1387,7 @@
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Documentações</h2>
       <div class="linha"></div>
-
+      
       <li>
         <a href="https://developer.mozilla.org/pt-BR/" target="_blank">
           <div class="resource-icon">
@@ -1401,6 +1401,21 @@
           <p>Guia de desenvolvimento</p>
         </div>
         <a class="resource-button" href="https://developer.mozilla.org/pt-BR/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript?fbclid=IwAR2tE_oRTGz6SR25qQvt2ZihpJRqESroG51ntpRNF4iRF8ZNw3BDufeNEvw" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/mdn.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript?fbclid=IwAR2tE_oRTGz6SR25qQvt2ZihpJRqESroG51ntpRNF4iRF8ZNw3BDufeNEvw" target="_blank">JavaScript</a>
+          </h2>
+          <p>MDN Web Docs</p>
+        </div>
+        <a class="resource-button" href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript?fbclid=IwAR2tE_oRTGz6SR25qQvt2ZihpJRqESroG51ntpRNF4iRF8ZNw3BDufeNEvw" target="_blank">Veja</a>
       </li>
 
       <li>
