--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -48,7 +48,7 @@
       <li>
         <a href="https://developer.apple.com/design/human-interface-guidelines/ " target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=1j7xTrJ9bLoAX-nWmi3&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=086da21f7134d09342caac12a5cfdcd2&oe=5E7F763B" alt="#" />          
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t34.0-1/p320x320/38987198_358933588097207_1944168479_n.jpg?_nc_cat=1&_nc_sid=dbb9e7&_nc_ohc=zA7_BFEblyoAX_0X9SX&_nc_ht=scontent.fcwb2-1.fna&_nc_tp=6&oh=90f9d5a7904b24cbd7abcb3e496a7755&oe=5E84BC3B" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -541,7 +541,7 @@ and share your amazing creations in a matter of minutes.</p>
         </div>
         <div class="resource-details">
           <h2>
-            <a href="https://uxdesign.cc/" target="_blank">UX Design</a>
+            <a href="https://uxdesign.cc/" target="_blank">UX Collective</a>
           </h2>
           <p>Blog</p>
         </div>
@@ -566,7 +566,7 @@ and share your amazing creations in a matter of minutes.</p>
       <li>
         <div class="resource-icon">
           <a href="https://uxplanet.org/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
+            <img src="https://cdn-images-1.medium.com/max/184/1*4igu0GOdXEqBvJfUJhHfyw@2x.png" alt="#" />
           </a>
         </div>
         <div class="resource-details">
