--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -547,6 +547,21 @@ and share your amazing creations in a matter of minutes.</p>
         </div>
         <a class="resource-button" href="https://uxdesign.cc/" target="_blank">Veja</a>
 		  </li>
+        
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.uxbooth.com/articles/" target="_blank">
+            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/10983123_10152845267500959_6016158940402575788_n.png?_nc_cat=105&_nc_sid=dbb9e7&_nc_ohc=qbXWiMyUjqYAX88fi0I&_nc_ht=scontent.fbfh14-2.fna&oh=b3eb32595106e271cb8ccf731b0aa320&oe=5EAB162C" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.uxbooth.com/articles/" target="_blank">UX Booth</a>
+          </h2>
+          <p>Blog</p>
+        </div>
+        <a class="resource-button" href="https://www.uxbooth.com/articles/" target="_blank">Veja</a>
+		  </li>
 
       <li>
         <div class="resource-icon">
