--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2260,9 +2260,25 @@
           </h2>
           <p>Dados sobre o Javascript</p>
         </div>
-        <a class="resource-button" href="https://stateofjs.com/" target="_blank">Veja</a>
-        <div id="acessibilidade"></div>
+        <a class="resource-button" href="https://stateofjs.com/" target="_blank">Veja</a>        
       </li>
+     
+      <li>
+        <a href="https://github.com/cezaraugusto/You-Dont-Know-JS?fbclid=IwAR1KQKuIZBcZ-l37rMZYY4Z9f4pobfM6ix0ZQytqfpWkLka9pkPVmpSKMI8" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://github.com/cezaraugusto/You-Dont-Know-JS?fbclid=IwAR1KQKuIZBcZ-l37rMZYY4Z9f4pobfM6ix0ZQytqfpWkLka9pkPVmpSKMI8" target="_blank">You Don't Know JS (série de livros)</a>
+          </h2>
+          <p>Série de Livros traduzidos para o português BR</p>
+        </div>
+        <a class="resource-button" href="https://github.com/cezaraugusto/You-Dont-Know-JS?fbclid=IwAR1KQKuIZBcZ-l37rMZYY4Z9f4pobfM6ix0ZQytqfpWkLka9pkPVmpSKMI8" target="_blank">Veja</a>        
+      </li>
+
+      <div id="acessibilidade"></div>
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Acessibilidade</h2>
