500+ CSS Icons - Minimalistic Icon library Designed by code

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1215,7 +1215,22 @@
           </h2>
           <p>Simply Delightful Icon System</p>
         </div>
-        <a class="resource-button" href="https://remixicon.com/" target="_blank">Veja</a>        
+        <a class="resource-button" href="https://remixicon.com/" target="_blank">Veja</a>                
+      </li>  
+      
+      <li>
+        <a href="https://css.gg/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://css.gg/" target="_blank">500+ CSS Icons</a>
+          </h2>
+          <p>Minimalistic icon library Designed by code. Customizable & Retina-Ready icons — entirely built in CSS</p>
+        </div>
+        <a class="resource-button" href="https://css.gg/" target="_blank">Veja</a>        
         <div id="pre-processors"></div>
       </li>  
 
