Lista de livros gratuitos de computação

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3312,6 +3312,23 @@
         <div id="foruns"></div>
       </li>
 
+      <li>
+        <a href="https://gist.github.com/LeeJunNakao/dea94882fcd6d3578ed749e6555f3157?fbclid=IwAR0kQwR6ujc2OVgMhd4_HvMR6zTawGfDqsU3KecrYTGlw58izPjq7RsYsfo" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://gist.github.com/LeeJunNakao/dea94882fcd6d3578ed749e6555f3157?fbclid=IwAR0kQwR6ujc2OVgMhd4_HvMR6zTawGfDqsU3KecrYTGlw58izPjq7RsYsfo" target="_blank">
+              Livros Gratuitos em Computação</a>
+          </h2>
+          <p>Lista de Livros</p>
+        </div>
+        <a class="resource-button" href="https://gist.github.com/LeeJunNakao/dea94882fcd6d3578ed749e6555f3157?fbclid=IwAR0kQwR6ujc2OVgMhd4_HvMR6zTawGfDqsU3KecrYTGlw58izPjq7RsYsfo" target="_blank">Veja</a>   
+        <div id="foruns"></div>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Fóruns</h2>
       <div class="linha"></div>
