--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -386,6 +386,21 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://marvelapp.com/pop/" target="_blank">Veja</a>
       </li> 
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.hongkiat.com/blog/useful-offline-utensils-and-toolkits-for-designers/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.hongkiat.com/blog/useful-offline-utensils-and-toolkits-for-designers/" target="_blank">20+ Useful Sketching and Prototyping Tools for Designers</a>
+          </h2>
+          <p>Hongkiat</p>
+        </div>
+        <a class="resource-button" href="https://www.hongkiat.com/blog/useful-offline-utensils-and-toolkits-for-designers/" target="_blank">Veja</a>
+      </li> 
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Sitemaps/Mindmaps</h2>
       <div class="linha"></div>
