--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 <head>
-
+<meta name="theme-color" content="#515151">
 <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 <title>Robson Designer</title>
 <meta charset="UTF-8" />
