--- a/index.html
+++ b/index.html
@@ -1,60 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 <head>
-<meta name="theme-color" content="#515151">
-<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-<title>Robson Designer</title>
-<meta charset="UTF-8" />
-<meta name="msvalidate.01" content="46AF1D64CB3F736072250A24FA9BCB1B" /> <!-- autenticação do bing -->
-<link rel="alternate" href="https://www.robsondesigner.com" hreflang="pt-br" /> <!--tag hreflang para identificar variações de idioma -->
-<meta name="keywords" content="Robson Designer, Curitiba, Robson Vinicius, Designer"> <!-- Eu sei que não é mais relevante para o SEO -->
-<meta name="description" content="Robson Designer: Robson Vinicius Designer formado em Design - Bacharelado com Pós-Graduação em Aplicativos de Jogos Digitais e MBA em Administração e Marketing.">
-<meta name="author" content="Robson Vinicius Designer">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#515151">
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <title>Robson Designer</title>
 
- <script>//Google Analytics
- 
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  <meta charset="UTF-8" />
+  <meta name="msvalidate.01" content="46AF1D64CB3F736072250A24FA9BCB1B" /> <!-- autenticação do bing -->
+  <link rel="alternate" href="https://www.robsondesigner.com" hreflang="pt-br" /> <!--tag hreflang para identificar variações de idioma -->
+  <meta name="keywords" content="Robson Designer, Curitiba, Robson Vinicius, Designer"> <!-- Eu sei que não é mais relevante para o SEO -->
+  <meta name="description" content="Robson Designer: Robson Vinicius Designer formado em Design - Bacharelado com Pós-Graduação em Aplicativos de Jogos Digitais e MBA em Administração e Marketing.">
+  <meta name="author" content="Robson Vinicius Designer">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="robots" content="index, follow">
 
-  ga('create', 'UA-69311922-1', 'auto');
-  ga('send', 'pageview');
+  <script>//Google Analytics 
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-            
+    ga('create', 'UA-69311922-1', 'auto');
+    ga('send', 'pageview');            
   </script>
 
+  <!-- Favicons
+      ================================================== -->
+  <link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
 
-<!-- Favicons
-    ================================================== -->
-<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
-<link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 
-<!-- Bootstrap -->
-<link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
-<link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
+  <!-- Slider
+      ================================================== -->
+  <link href="css/owl.carousel.css" rel="stylesheet" media="screen">
+  <link href="css/owl.theme.css" rel="stylesheet" media="screen">
 
-<!-- Slider
-    ================================================== -->
-<link href="css/owl.carousel.css" rel="stylesheet" media="screen">
-<link href="css/owl.theme.css" rel="stylesheet" media="screen">
+  <!-- Stylesheet
+      ================================================== -->
+  <link rel="stylesheet" type="text/css"  href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900,300" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300" rel="stylesheet" type="text/css">
+  <script type="text/javascript" src="js/modernizr.custom.js"></script>
 
-<!-- Stylesheet
-    ================================================== -->
-<link rel="stylesheet" type="text/css"  href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/animate.min.css">
-<link href="https://fonts.googleapis.com/css?family=Lato:400,700,900,300" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800,600,300" rel="stylesheet" type="text/css">
-<script type="text/javascript" src="js/modernizr.custom.js"></script>
-
-<!-- Loader 
-    ========================================= -->
-<link rel="stylesheet" href="css/paceloader.css">
-<script type="text/javascript" src="js/pace.js"></script>
-
+  <!-- Loader 
+      ========================================= -->
+  <link rel="stylesheet" href="css/paceloader.css">
+  <script type="text/javascript" src="js/pace.js"></script>
 
 </head>
 
@@ -412,7 +408,7 @@
 <div id="footer">
 	
   <div class="container">
-      <p> 2016  <a href="https://br.linkedin.com/in/robson-vinicius" target="_blank">&copy; Robson Designer</a></p>
+      <p> 2016 - 2020 <a href="https://br.linkedin.com/in/robson-vinicius" target="_blank">&copy; Robson Designer</a></p>
      
   </div>
 </div>
