logotipo Implantando o Marketing

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -46,7 +46,7 @@
       <li>
         <a href="https://www.implantandomarketing.com" target="_blank">
           <div class="resource-icon">
-            <img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p320x320/10443438_834970836554408_8708284076846395352_n.jpg?_nc_cat=110&_nc_ohc=6zo5BhUIIDQAQlDj9qR48ZLXH8Hm0WyBY2Cj_0nvNaYMVrD5Q_pWllPqA&_nc_ht=scontent.fbfh14-2.fna&oh=7b3828a4479a0f3f68caa7199cf13634&oe=5E72D951" alt="#" />
+            <img src="https://scontent.fbfh14-1.fna.fbcdn.net/v/t1.0-1/p320x320/10443438_834970836554408_8708284076846395352_n.jpg?_nc_cat=110&_nc_sid=dbb9e7&_nc_ohc=g5N5yuaS2I4AX9q_o2k&_nc_ht=scontent.fbfh14-1.fna&_nc_tp=6&oh=062f1563d09c143a65ac68d5aa1eccdf&oe=5ECAE72F" alt="#" />
           </div>
         </a>
         <div class="resource-details">
