Online Text Tools

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -369,7 +369,22 @@
           </h2>
           <p>React Navigation v5</p>
         </div>
-        <a class="resource-button" href="https://medium.com/@claudio.199644/diferen%C3%A7as-do-novo-react-navigation-v5-99a1ae5139d2" target="_blank">Veja</a>
+        <a class="resource-button" href="https://medium.com/@claudio.199644/diferen%C3%A7as-do-novo-react-navigation-v5-99a1ae5139d2" target="_blank">Veja</a>        
+      </li> 
+
+      <li>
+        <a href="https://onlinetexttools.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://onlinetexttools.com/" target="_blank">Online Text Tools</a>
+          </h2>
+          <p>Cria imagem do texto</p>
+        </div>
+        <a class="resource-button" href="https://onlinetexttools.com/" target="_blank">Veja</a>
         <div id="css"></div>
       </li> 
 
