--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -387,6 +387,23 @@
         <a class="resource-button" href="https://onlinetexttools.com/" target="_blank">Veja</a>
         <div id="css"></div>
       </li> 
+      </li> 
+
+      <li>
+        <a href="https://realfavicongenerator.net/f" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://realfavicongenerator.net/f" target="_blank">Real Favicon Generator</a>
+          </h2>
+          <p>Favicon Checker</p>
+        </div>
+        <a class="resource-button" href="https://realfavicongenerator.net/f" target="_blank">Veja</a>
+        <div id="css"></div>
+      </li> 
 
       <div class="linha"></div>        
       <h2 class="margen-titulo color-frontend">CSS</h2>
