Sessão Branding em página Marketing com link do texto How to Create a Powerful Brand Identity - Column Five Media

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -699,6 +699,25 @@
         <a class="resource-button" href="http://agilemanifesto.org/iso/ptbr/manifesto.html" target="_blank">Veja</a>
       </li>
 
+      <div class="linha"></div>
+        <h2 class="margen-titulo color-frontend">Branding</h2>        
+      <div class="linha"></div>
+            
+      <li>
+        <a href="https://www.columnfivemedia.com/how-to-create-a-brand-identity" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.columnfivemedia.com/how-to-create-a-brand-identity" target="_blank">How to Create a Powerful Brand Identity</a>
+          </h2>
+          <p>Column Five Media</p>
+        </div>
+        <a class="resource-button" href="https://www.columnfivemedia.com/how-to-create-a-brand-identity" target="_blank">Veja</a>
+      </li>
+
     </ul>
       <ul class="sidebar-navigation">
              <li><a href="../apoio/index.html"><div class="circle"></div>Apoio</a></li>	
