--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -390,18 +390,18 @@
       </li> 
 
       <li>
-        <a href="https://realfavicongenerator.net/f" target="_blank">
+        <a href="https://realfavicongenerator.net/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://realfavicongenerator.net/f" target="_blank">Real Favicon Generator</a>
+            <a href="https://realfavicongenerator.net/" target="_blank">Real Favicon Generator</a>
           </h2>
           <p>Favicon Checker</p>
         </div>
-        <a class="resource-button" href="https://realfavicongenerator.net/f" target="_blank">Veja</a>
+        <a class="resource-button" href="https://realfavicongenerator.net/" target="_blank">Veja</a>
         <div id="css"></div>
       </li> 
 
