Página Marketing: Brand Persona: o poder da personificação dos valores da sua marca - Rock Content

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -717,6 +717,21 @@
         </div>
         <a class="resource-button" href="https://www.columnfivemedia.com/how-to-create-a-brand-identity" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="https://rockcontent.com/blog/brand-persona/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://rockcontent.com/blog/brand-persona/" target="_blank">Brand Persona: o poder da personificação dos valores da sua marca</a>
+          </h2>
+          <p>Rock Content</p>
+        </div>
+        <a class="resource-button" href="https://rockcontent.com/blog/brand-persona/" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
