Página Marketing: How to Create a brand style guide - 99 Designs

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -732,6 +732,21 @@
         </div>
         <a class="resource-button" href="https://rockcontent.com/blog/brand-persona/" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="https://99designs.com.br/blog/logo-branding/how-to-create-a-brand-style-guide/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://99designs.com.br/blog/logo-branding/how-to-create-a-brand-style-guide/" target="_blank">How to create a brand style guide</a>
+          </h2>
+          <p>99 Designs</p>
+        </div>
+        <a class="resource-button" href="https://99designs.com.br/blog/logo-branding/how-to-create-a-brand-style-guide/" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
