Página Marketing: How to Define Your Unique Brand Voice - CoSchedule

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -747,6 +747,21 @@
         </div>
         <a class="resource-button" href="https://99designs.com.br/blog/logo-branding/how-to-create-a-brand-style-guide/" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="https://coschedule.com/marketing-strategy/brand-voice/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://coschedule.com/marketing-strategy/brand-voice/" target="_blank">How to Define Your Unique Brand Voice</a>
+          </h2>
+          <p>CoSchedule</p>
+        </div>
+        <a class="resource-button" href="https://coschedule.com/marketing-strategy/brand-voice/" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
