Página Marketing: What is Brand Architecture? - Inkbot Design

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -762,6 +762,21 @@
         </div>
         <a class="resource-button" href="https://coschedule.com/marketing-strategy/brand-voice/" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="https://medium.com/inkbot-design/what-is-brand-architecture-edab9aa55ee" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://medium.com/inkbot-design/what-is-brand-architecture-edab9aa55ee" target="_blank">What is Brand Architecture?</a>
+          </h2>
+          <p>Inkbot Design</p>
+        </div>
+        <a class="resource-button" href="https://medium.com/inkbot-design/what-is-brand-architecture-edab9aa55ee" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
