Página Marketing: Brand Architecture: Creating Clarity From Chaos - ignyte

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -777,6 +777,21 @@
         </div>
         <a class="resource-button" href="https://medium.com/inkbot-design/what-is-brand-architecture-edab9aa55ee" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="http://www.ignytebrands.com/brand-architecture-creating-clarity-from-chaos/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://www.ignytebrands.com/brand-architecture-creating-clarity-from-chaos/" target="_blank">Brand Architecture: Creating Clarity From Chaos</a>
+          </h2>
+          <p>ignyte</p>
+        </div>
+        <a class="resource-button" href="http://www.ignytebrands.com/brand-architecture-creating-clarity-from-chaos/" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
