Página Marketing: Define your Employee Value Proposition (EVP) and use it to attract candidates? - TalentLyft

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -792,6 +792,21 @@
         </div>
         <a class="resource-button" href="http://www.ignytebrands.com/brand-architecture-creating-clarity-from-chaos/" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="https://medium.com/hr-blog-resources/define-your-employee-value-proposition-evp-and-use-it-to-attract-candidates-734be0f2fe74" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://medium.com/hr-blog-resources/define-your-employee-value-proposition-evp-and-use-it-to-attract-candidates-734be0f2fe74" target="_blank">Define your Employee Value Proposition (EVP) and use it to attract candidates?</a>
+          </h2>
+          <p>TalentLyft</p>
+        </div>
+        <a class="resource-button" href="https://medium.com/hr-blog-resources/define-your-employee-value-proposition-evp-and-use-it-to-attract-candidates-734be0f2fe74" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
