Página Marketing: Glass Box Brands - Trend Watching

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -807,6 +807,21 @@
         </div>
         <a class="resource-button" href="https://medium.com/hr-blog-resources/define-your-employee-value-proposition-evp-and-use-it-to-attract-candidates-734be0f2fe74" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="https://trendwatching.com/quarterly/2017-09/glass-box-brands/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://trendwatching.com/quarterly/2017-09/glass-box-brands/" target="_blank">Glass Box Brands</a>
+          </h2>
+          <p>Trend Watching</p>
+        </div>
+        <a class="resource-button" href="https://trendwatching.com/quarterly/2017-09/glass-box-brands/" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
