Página Marketing: The Importance of Brand Perception - Brandwatch

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -822,6 +822,21 @@
         </div>
         <a class="resource-button" href="https://trendwatching.com/quarterly/2017-09/glass-box-brands/" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="https://www.brandwatch.com/blog/marketing-the-importance-of-brand-perception/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.brandwatch.com/blog/marketing-the-importance-of-brand-perception/" target="_blank">The Importance of Brand Perception</a>
+          </h2>
+          <p>Brandwatch</p>
+        </div>
+        <a class="resource-button" href="https://www.brandwatch.com/blog/marketing-the-importance-of-brand-perception/" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
