Página Marketing: Why Brand Perception Matters and How You Can Measure - GetFeedback

--- a/my/paginas/marketing/index.html
+++ b/my/paginas/marketing/index.html
@@ -837,6 +837,21 @@
         </div>
         <a class="resource-button" href="https://www.brandwatch.com/blog/marketing-the-importance-of-brand-perception/" target="_blank">Veja</a>
       </li>
+            
+      <li>
+        <a href="https://www.getfeedback.com/resources/cx/brand-perception/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.getfeedback.com/resources/cx/brand-perception/" target="_blank">Why Brand Perception Matters and How You Can Measure It</a>
+          </h2>
+          <p>GetFeedback</p>
+        </div>
+        <a class="resource-button" href="https://www.getfeedback.com/resources/cx/brand-perception/" target="_blank">Veja</a>
+      </li>
 
     </ul>
       <ul class="sidebar-navigation">
