Página Front End | Adicionando a sessão Animações: Flipbook - Efeito revista para pdf

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1061,6 +1061,22 @@
         <div id="zoom"></div>
       </li>  
 
+      <li>
+        <a href="http://3dflipbook.net/documentation?fbclid=IwAR2q_stRrGKk6rup2HsVRjls4raUPfX0B-J5FUm1KrywcfANieotngdeOcw" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="http://3dflipbook.net/documentation?fbclid=IwAR2q_stRrGKk6rup2HsVRjls4raUPfX0B-J5FUm1KrywcfANieotngdeOcw" target="_blank">Flipbook</a>
+          </h2>
+          <p>Efeito revista para pdf</p>
+        </div>
+        <a class="resource-button" href="http://3dflipbook.net/documentation?fbclid=IwAR2q_stRrGKk6rup2HsVRjls4raUPfX0B-J5FUm1KrywcfANieotngdeOcw" target="_blank">Veja</a>
+        <div id="zoom"></div>
+      </li>  
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Zoom | Modal | Popup</h2>
       <div class="linha"></div>
