Página Front End: 167 favorite JavaScript utilities

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1937,6 +1937,36 @@
       </li>
 
       <li>
+        <a href="https://webcode.tools/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://webcode.tools/" target="_blank">Web Code Tools</a>
+          </h2>
+          <p>Gerador de códigos</p>
+        </div>
+        <a class="resource-button" href="https://webcode.tools/" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <a href="https://1loc.dev/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://1loc.dev/" target="_blank">167 favorite JavaScript utilities</a>
+          </h2>
+          <p>in single line of code! No more!</p>
+        </div>
+        <a class="resource-button" href="https://1loc.dev/" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://free-for.dev/" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
@@ -1994,21 +2024,6 @@
           <p>Use the best bits of ES6 and CSS to style your apps without stress</p>
         </div>
         <a class="resource-button" href="https://www.styled-components.com/" target="_blank">Veja</a>
-      </li>
-
-      <li>
-        <a href="https://webcode.tools/" target="_blank">
-          <div class="resource-icon">
-            <img src="../../base/images/portfolios.jpg" alt="#" />
-          </div>
-        </a>
-        <div class="resource-details">
-          <h2>
-            <a href="https://webcode.tools/" target="_blank">Web Code Tools</a>
-          </h2>
-          <p>Gerador de códigos</p>
-        </div>
-        <a class="resource-button" href="https://webcode.tools/" target="_blank">Veja</a>
       </li>
 
       <li>
